# dd-native-iast-rewriter-js

./: .eslintignore  .eslintrc.json  .eslintrc.yml  .gitignore  .npmignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE-3rdparty.csv  NOTICE  README.md  build.rs  index.d.ts  index.js  jest.config.js  main.js  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-wasm.yml  build.yml  codeql-analysis.yml  release.yml  v8test.yml
.husky/: pre-commit  pre-push
benchmark/: babel-rewrite.js  benchmark.js
docker/: Dockerfile  alpine.Dockerfile  test.alpine.Dockerfile  v8test-builder.Dockerfile  v8test.Dockerfile
integration-test/: .eslintrc.json  edited-files-cache.js  setup.js  stack-traces.spec.js
integration-test/requires/: errors.js
js/source-map/: index.js
js/stack-trace/: index.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
samples/: login.js  login.js.map
scripts/: artifacts-gyp.mjs  artifacts.mjs  check_licenses.js  crawler.js  version-checker.js
src/: assign_transform_visitor.rs  block_transform_visitor.rs  file_reader.rs  lib.rs  lib_napi.rs  lib_wasm.rs  operation_transform_visitor.rs  rewriter.rs  telemetry.rs  tracer_logger.rs  transform_visitor.rs  util.rs  visitor_util.rs
src/tests/: arrow_func_tests.rs  binary_assignation_test.rs  binary_expression_test.rs  hardcoded_secret_test.rs  literal_test.rs  mod.rs  source_map_test.rs  string_method_test.rs  telemetry_test.rs  template_literal_test.rs
src/transform/: arrow_transform.rs  assign_add_transform.rs  binary_add_transform.rs  call_expr_transform.rs  function_prototype_transform.rs  mod.rs  operand_handler.rs  opt_chain_transform.rs  template_transform.rs  transform_status.rs
src/visitor/: assign_add_transform.rs  assign_transform_visitor.rs  binary_add_transform.rs  block_transform_visitor.rs  call_expr_transform.rs  csi_methods.rs  function_prototype_transform.rs  hardcoded_secret_visitor.rs  ident_provider.rs  literal_visitor.rs  mod.rs  (+8 more)
test/: .eslintrc.json  binary_expression.spec.js  hardcoded_secret.spec.js  index.js  index.spec.js  initialization-prefix.spec.js  literals.spec.js  main.spec.js  method_without_callee.spec.js  optional_chaining.spec.js  rewriter_config.spec.js  setup.js  stack_trace.spec.js  string_method.spec.js  template_literal.spec.js  tracer_logger.spec.js  util.js
tests/: index.spec.ts
wasm/: .npmignore
(+14 files in other folders)
