[package]
edition = "2021"
name = "native-iast-rewriter"
version = "3.0.0-pre"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.2.0", default-features = false, features = ["napi4"] }
napi-derive = "2.2.0"
swc = "0.205.0"
swc_ecma_visit = "0.70.0"
swc_visit_macros = "0.5.3"
swc_ecma_parser = "0.111.0"
anyhow = "1.0.56"
fastrand = "1.8.0"
instant = "0.1"
base64 = "0.13.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dev-dependencies]
tempfile = "3.3.0"
spectral = "0.6.0"
ctor = "0.1.23"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = false

[features]
default = ["instant/wasm-bindgen", "instant/inaccurate"]
napi = []

