[package]
edition = "2021"
name = "native-iast-rewriter"
version = "2.4.0-pre-002"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.2.0", default-features = false, features = ["napi4"] }
napi-derive = "2.2.0"
swc = "0.282.1"
swc_common = "0.36.0"
swc_ecma_ast = "0.117.0"
swc_ecma_visit = "0.103.0"
swc_ecma_parser = "0.148.0"
anyhow = "1.0.81"
fastrand = { version = "2.1.0", features = ["js"] }
instant = "0.1"
base64 = "0.21.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.63"
log = {version = "0.4", features = ["std"] }

[dev-dependencies]
tempfile = "3.3.0"
speculoos = "0.11.0"
ctor = "0.1.23"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = false

[features]
default = ["instant/wasm-bindgen", "instant/inaccurate"]
napi = []

